--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ jdk:
 ##script: bash build --debug
 ##script: mvn clean install 
 ##script: mvn clean sonar:sonar -Pcoverage -Dsonar.projectKey=IASI-SAKS_groucho install
-before_script: 
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent sonar:sonar -DskipTests -Dsonar.projectKey=IASI-SAKS_groucho
+## before_script: 
+##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent sonar:sonar -DskipTests -Dsonar.projectKey=IASI-SAKS_groucho
 script:
-- mvn clean install
+    - mvn clean install
 ## script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho
 # We need to avoid sudo for caching on Travis
 # http://docs.travis-ci.com/user/caching/
@@ -49,6 +49,7 @@ before_script:
 #    - export JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/"
     - export MAVEN_SKIP_RC=true
     - export MAVEN_OPTS="-Xms1024m -Xmx2g -XX:MaxPermSize=512m"
+    - mvn clean sonar:sonar -Pcoverage -Dsonar.projectKey=IASI-SAKS_groucho install
 
 ### Copied form LeanPAd, commented by Gulyx
 # after_success:
