--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ cache:
         - $HOME/.m2
         - $HOME/.sonar/cache
 
-before_install:
+before_script:
     -  pip --version
     -  pip install --help
     - export JAVA_HOME=`dirname $(dirname $(readlink -f $(which javac)))`
@@ -49,7 +49,7 @@ before_install:
     - export MAVEN_OPTS="-Xms1024m -Xmx2g -XX:MaxPermSize=512m"
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DskipTests 
 
-install:
+script:
     - mvn clean install
 
 ### Copied form LeanPAd, commented by Gulyx
