--- a/.travis.yml
+++ b/.travis.yml
@@ -40,13 +40,15 @@ cache:
         - $HOME/.m2
         - $HOME/.sonar/cache
 
-before_script:
+install:
     -  pip --version
     -  pip install --help
     - export JAVA_HOME=`dirname $(dirname $(readlink -f $(which javac)))`
 #    - export JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64/"
     - export MAVEN_SKIP_RC=true
     - export MAVEN_OPTS="-Xms1024m -Xmx2g -XX:MaxPermSize=512m"
+
+before_script:
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DskipTests 
 
 script:
