--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,16 @@
                                 </execution>
                             </executions>
                         </plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-surefire-plugin</artifactId>
+                                <!-- <version>${maven-surefire.version}</version> -->
+                                <configuration>
+                                  <excludes>
+                                    <exclude>**/carvingStateTests/*.java</exclude>
+                                  </excludes>
+                                </configuration>
+                        </plugin>
                     </plugins>
                 </build>
             </profile>
