--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,8 @@ install:
     - export MAVEN_OPTS="-Xms1024m -Xmx2g -XX:MaxPermSize=512m"
 
 before_script:
-##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho
-    - mvn clean sonar:sonar -Pcoverage -Dsonar.projectKey=IASI-SAKS_groucho package
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho
+##    - mvn clean sonar:sonar -Pcoverage -Dsonar.projectKey=IASI-SAKS_groucho package
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DskipTests 
 
 script:
