--- a/pom.xml
+++ b/pom.xml
@@ -84,23 +84,6 @@
 					</execution>
 				</executions>
 			</plugin>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-surefire-plugin</artifactId>
-                                <!-- <version>${maven-surefire.version}</version> -->
-				<executions>
-					<execution>
-						<goals>
-							<goal>sonar</goal>
-						</goals>
-					</execution>
-				</executions>
-                                <configuration>
-                                  <excludes>
-                                    <exclude>**/SimpleCarvingStateTest.java</exclude>
-                                  </excludes>
-                                </configuration>
-                        </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -137,7 +120,7 @@
 		</plugins>
 	</build>
 
-    <profiles>
+<!--    <profiles>
             <profile>
                 <id>coverage</id>
                 <build>
@@ -164,5 +147,5 @@
                     </plugins>
                 </build>
             </profile>
-    </profiles>    
+    </profiles>    -->
 </project>
