--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ before_script:
 ##    - mvn clean sonar:sonar -Pcoverage -Dsonar.projectKey=IASI-SAKS_groucho package
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DskipTests 
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.*
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package -Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho 
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
 
 script:
     - mvn clean install
