--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_script:
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DskipTests 
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.*
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify:integration-test sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify failsafe:verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
 
 script:
     - mvn clean install
