--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -188,7 +188,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- <version>${maven-surefire.version}</version> -->
+				<version>${maven-surefire.version}</version>
 				<executions>
 					<execution>
 						<goals>
