--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,21 @@
 
 				</configuration>
 			</plugin>
+    <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <!-- Minimal supported version is 2.4 -->
+  <version>3.0.0-M4</version>
+  <configuration>
+    <properties>
+      <property>
+        <name>listener</name>
+        <value>org.sonar.java.jacoco.JUnitListener</value>
+      </property>
+    </properties>
+  </configuration>
+</plugin>
+            
 		</plugins>
 	</build>
 
@@ -148,4 +163,5 @@
                 </build>
             </profile>
     </profiles>    -->
+    
 </project>
