--- a/.travis.yml
+++ b/.travis.yml
@@ -55,10 +55,10 @@ before_script:
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.*
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false 
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest -DfailIfNoTests=false 
 
 script:
-    - mvn clean install -DskipTests
+    - mvn clean install
 
 ### Copied form LeanPAd, commented by Gulyx
 # after_success:
