Removed sonar.test.exclude property

--- a/groucho-core/pom.xml
+++ b/groucho-core/pom.xml
@@ -64,7 +64,7 @@
         <CRIJ.version>0.0.1-SNAPSHOT</CRIJ.version>
         
 <!--        <sonar.exclusions>org/binarytherapy/generated/**/*, **/GuiceBindComposer.java</sonar.exclusions>-->
-        <sonar.test.exclusions>**/carvingStateTests/SimpleCarvingStateTest.java</sonar.test.exclusions>
+<!--        <sonar.test.exclusions>**/carvingStateTests/SimpleCarvingStateTest.java</sonar.test.exclusions>-->
   </properties>
   
 <!--<repositories>
