--- a/groucho-core/pom.xml
+++ b/groucho-core/pom.xml
@@ -60,9 +60,11 @@
         
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
         
+		<maven-surefire.version>3.0.0-M4</maven-surefire.version>
+
         <groucho-crochet.version>1.0-SNAPSHOT</groucho-crochet.version>
         <CRIJ.version>0.0.1-SNAPSHOT</CRIJ.version>
-        
+                
 <!--        <sonar.exclusions>org/binarytherapy/generated/**/*, **/GuiceBindComposer.java</sonar.exclusions>-->
 <!--        <sonar.test.exclusions>**/carvingStateTests/SimpleCarvingStateTest.java</sonar.test.exclusions>-->
   </properties>
@@ -134,6 +136,11 @@
                 <target>${maven-compiler-plugin.targetVersion}</target>
             </configuration>
         </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven-surefire.version}</version>
+			</plugin>
     </plugins>
   </build>    
 </project>
