validating the effects of "-Dtest=" on a succesful build without sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,10 +56,10 @@ before_script:
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false "-Dtest=!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false -Dtest="*,!it.cnr.iasi.saks.groucho.carvingStateTests.SimpleCarvingStateTest"
 ##    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent -Dtest="!SimpleCarvingStateTest" verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false 
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false 
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho -DfailIfNoTests=false -DskipTests 
 
 script:
-    - mvn clean install
+    - mvn clean install -Dtest="!SimpleCarvingStateTest"
 
 ### Copied form LeanPAd, commented by Gulyx
 # after_success:
