sonar report aggregate first tentative

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,9 @@
 
 		<asm.version>5.0.3</asm.version>
         
+        <sonar.aggregate.report.dir>tests/target/site/jacoco-aggregate/jacoco.xml</sonar.aggregate.report.dir>
         <jacoco-maven-plugin.version>0.8.3</jacoco-maven-plugin.version>
+        
 	</properties>
 
 	<dependencies>
