added report aggregate configuration for jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,20 @@
 
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}<version>
+                <executions>
+                    <execution>
+                        <id>report</id>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                        <phase>verify</phase>
+                    </execution>
+                </executions>
+        </plugin>                    
 		</plugins>
 	</build>
 
