--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco-maven-plugin.version}<version>
+                <version>${jacoco-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>report</id>
@@ -132,7 +132,7 @@
                         <phase>verify</phase>
                     </execution>
                 </executions>
-        </plugin>                    
+            </plugin>                    
 		</plugins>
 	</build>
 
