--- a/groucho-core/pom.xml
+++ b/groucho-core/pom.xml
@@ -66,7 +66,7 @@
         <groucho-crochet.version>1.0-SNAPSHOT</groucho-crochet.version>
         <CRIJ.version>0.0.1-SNAPSHOT</CRIJ.version>
         
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${sonar.aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+<!--        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>-->
                 
 <!--        <sonar.exclusions>org/binarytherapy/generated/**/*, **/GuiceBindComposer.java</sonar.exclusions>-->
 <!--        <sonar.test.exclusions>**/carvingStateTests/SimpleCarvingStateTest.java</sonar.test.exclusions>-->
