--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ script:
     - mvn clean install
 
 after_success:
-    - mvn -X org.jacoco:jacoco-maven-plugin:prepare-agent -Dgroucho-core.test.excludes="**/carvingStateTests/*" verify 
+    - mvn -PqaProfile -Dgroucho-core.test.excludes="**/carvingStateTests/*" verify 
     - mvn sonar:sonar -Dsonar.projectKey=IASI-SAKS_groucho 
     
 ### Copied form LeanPAd, commented by Gulyx
