--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -22,6 +22,7 @@
   <groupId>it.cnr.iasi.saks.groucho</groupId>
   <artifactId>groucho-lab</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <name>groucho-lab</name>
   <url>http://saks.iasi.cnr.it/tools/groucho</url>
 
@@ -84,8 +85,21 @@
 	  <version>${slf4j.version}</version>
     </dependency>
 
+    <dependency>
+        <groupId>opensymphony</groupId>
+        <artifactId>oscache</artifactId>
+        <version>2.1.1</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.apache.jcs</groupId>
+        <artifactId>jcs</artifactId>
+        <version>1.3</version>
+        <type>pom</type>
+    </dependency>   
   </dependencies>
 
   <build>
+
   </build>
 </project>
