--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -1,105 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
- 	This file is part of GROUCHO, originally developed at CNR-IASI.
- 	For more information visit:
- 	http://saks.iasi.cnr.it/tools/groucho
- 	    
- 	This is free software: you can redistribute it and/or modify
- 	it under the terms of the GNU General Public License as 
- 	published by the Free Software Foundation, either version 3 of the 
- 	License, or (at your option) any later version.
- 	
- 	This software is distributed in the hope that it will be useful,
- 	but WITHOUT ANY WARRANTY; without even the implied warranty of
- 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- 	GNU General Public License for more details.
-    
- 	You should have received a copy of the GNU General Public License
- 	along with this source.  If not, see <http://www.gnu.org/licenses/>.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>it.cnr.iasi.saks.groucho</groupId>
-  <artifactId>groucho-lab</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>groucho-lab</name>
-  <url>http://saks.iasi.cnr.it/tools/groucho</url>
+<!-- This file is part of GROUCHO, originally developed at CNR-IASI. For 
+	more information visit: http://saks.iasi.cnr.it/tools/groucho This is free 
+	software: you can redistribute it and/or modify it under the terms of the 
+	GNU General Public License as published by the Free Software Foundation, 
+	either version 3 of the License, or (at your option) any later version. This 
+	software is distributed in the hope that it will be useful, but WITHOUT ANY 
+	WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
+	FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
+	You should have received a copy of the GNU General Public License along with 
+	this source. If not, see <http://www.gnu.org/licenses/>. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>it.cnr.iasi.saks.groucho</groupId>
+	<artifactId>groucho-lab</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>groucho-lab</name>
+	<url>http://saks.iasi.cnr.it/tools/groucho</url>
 
-  <parent>
-    <groupId>it.cnr.iasi.saks.groucho</groupId>
-    <artifactId>groucho</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
- 
-  <developers>
+	<parent>
+		<groupId>it.cnr.iasi.saks.groucho</groupId>
+		<artifactId>groucho</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+
+	<developers>
 		<developer>
 			<id>gulyx</id>
 			<name>Guglielmo De Angelis</name>
 		</developer>
-  </developers>
-  
-  <licenses>
+	</developers>
+
+	<licenses>
 		<license>
 			<name>GNU General Public License (GPL ver.3)</name>
 			<url>http://www.gnu.org/licenses/gpl.txt</url>
 		</license>
-  </licenses>  
+	</licenses>
 
 
-  <properties>
-	<junit.version>4.0</junit.version>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<properties>
+		<junit.version>4.0</junit.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-	<maven.compiler.source>1.8</maven.compiler.source>
-	<maven.compiler.target>1.8</maven.compiler.target>
-	<slf4j.version>1.7.12</slf4j.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<slf4j.version>1.7.12</slf4j.version>
+		<jackson-databind.version>2.11.0</jackson-databind.version>
 
-        <groucho-core.version>1.0-SNAPSHOT</groucho-core.version>
-        <groucho-lsh-rest.version>1.0-SNAPSHOT</groucho-lsh-rest.version>
-  </properties>
+		<groucho-core.version>1.0-SNAPSHOT</groucho-core.version>
+		<groucho-lsh-rest.version>1.0-SNAPSHOT</groucho-lsh-rest.version>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>it.cnr.iasi.saks.groucho</groupId>
-      <artifactId>groucho-core</artifactId>
-      <version>${groucho-core.version}</version>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>it.cnr.iasi.saks.groucho</groupId>
+			<artifactId>groucho-core</artifactId>
+			<version>${groucho-core.version}</version>
+		</dependency>
 
-    <dependency>
-      <groupId>it.cnr.iasi.saks.groucho</groupId>
-      <artifactId>groucho-lsh-rest</artifactId>
-      <version>${groucho-lsh-rest.version}</version>
-    </dependency>
+		<dependency>
+			<groupId>it.cnr.iasi.saks.groucho</groupId>
+			<artifactId>groucho-lsh-rest</artifactId>
+			<version>${groucho-lsh-rest.version}</version>
+		</dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-	  <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-	  <version>${slf4j.version}</version>
-    </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
 
-    <dependency>
-        <groupId>opensymphony</groupId>
-        <artifactId>oscache</artifactId>
-        <version>2.1.1</version>
-    </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson-databind.version}</version>
+		</dependency>
 
-    <dependency>
-        <groupId>org.apache.jcs</groupId>
-        <artifactId>jcs</artifactId>
-        <version>1.3</version>
-        <type>pom</type>
-    </dependency>   
-  </dependencies>
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>oscache</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 
-  <build>
+		<dependency>
+			<groupId>org.apache.jcs</groupId>
+			<artifactId>jcs</artifactId>
+			<version>1.3</version>
+			<type>pom</type>
+		</dependency>
+	</dependencies>
 
-  </build>
+	<build>
+
+	</build>
 </project>
