--- a/groucho-lab/src/test/resources/testingConf.properties
+++ b/groucho-lab/src/test/resources/testingConf.properties
@@ -1,2 +1,2 @@
 groucho.governance.manager.class=it.cnr.iasi.saks.groucho.performanceOverheadTest.TestGovernanceManager_ActivationWithProbability
-groucho.lab.intrument.jsonFile=/tmp/model.json
+groucho.lab.intrument.jsonFile=modelResource.json
