--- a/groucho-sonar/pom.xml
+++ b/groucho-sonar/pom.xml
@@ -76,6 +76,11 @@
       <artifactId>groucho-lsh-rest</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>it.cnr.iasi.saks.groucho</groupId>
+      <artifactId>groucho-lab</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
