--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -204,7 +204,7 @@
 					<systemPropertyVariables>
 						<propertyName>java.library.path</propertyName>
 					</systemPropertyVariables>
-					<argLine>
+					<argLine>@{argLine} 
 						-Djava.library.path=${jep-inst-path}/jep/
 					</argLine>
 				</configuration>
