--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -67,7 +67,9 @@
 		
 		<python.target.resource>${project.build.outputDirectory}/python</python.target.resource>
 
-        	<sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+<!--         argLine has been configured this way because the other way was causing Travis CI failing (see **HERE-ARG-LINE**) -->
+        <argLine>-Djava.library.path=${jep-inst-path}/jep/</argLine>
 	</properties>
 
 	<dependencies>
@@ -204,8 +206,9 @@
 					<systemPropertyVariables>
 						<propertyName>java.library.path</propertyName>
 					</systemPropertyVariables>
-					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/
-					</argLine>
+<!-- 					This is the place-holder **HERE-ARG-LINE** -->
+<!-- 					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/ -->
+<!-- 					</argLine> -->
 				</configuration>
 			</plugin>
 
