--- a/groucho-core/pom.xml
+++ b/groucho-core/pom.xml
@@ -48,7 +48,9 @@
   </licenses>  
 
   <properties>
+<!-- This property can be removed!!! -->
 		<artifact.jar.mainclass>it.cnr.iasi.saks.groucho.main.Main</artifact.jar.mainclass>
+<!--  -->	
 		<junit.version>4.0</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.12</slf4j.version>
