--- a/lsh-invivo/pom.xml
+++ b/lsh-invivo/pom.xml
@@ -68,8 +68,9 @@
 		<python.target.resource>${project.build.outputDirectory}/python</python.target.resource>
 
         <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-<!--         argLine has been configured this way because the other way was causing Travis CI failing (see **HERE-ARG-LINE**) -->
-        <argLine>-Djava.library.path=${jep-inst-path}/jep/</argLine>
+
+<!--         argLine must be defined, otherwise surfire/failsafe will broke the build when using @{argLine} (see **HERE-ARG-LINE**) -->
+        <argLine></argLine>
 	</properties>
 
 	<dependencies>
@@ -207,11 +208,10 @@
 						<propertyName>java.library.path</propertyName>
 					</systemPropertyVariables>
 <!-- 					This is the place-holder **HERE-ARG-LINE** -->
-<!-- 					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/ -->
-<!-- 					</argLine> -->
+					<argLine>@{argLine} -Djava.library.path=${jep-inst-path}/jep/
+					</argLine>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 </project>
