--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -58,7 +58,19 @@
 
 		<groucho-core.version>1.0-SNAPSHOT</groucho-core.version>
 		<groucho-lsh-rest.version>1.0-SNAPSHOT</groucho-lsh-rest.version>
+
 		<groucho-lab.build.directory>${basedir}/../groucho-lab/target</groucho-lab.build.directory>
+		<groucho-lab.build.finalName>groucho-lab-1.0-SNAPSHOT</groucho-lab.build.finalName>
+
+		<groucho-crochet.build.directory>${basedir}/../groucho-crochet/target</groucho-crochet.build.directory>
+		<groucho-crochet.build.finalName>CRIJ-0.0.1-SNAPSHOT</groucho-crochet.build.finalName>
+
+		<groucho-core.build.directory>${basedir}/../groucho-core/target</groucho-core.build.directory>
+		<groucho-core.build.finalName>groucho-core-1.0-SNAPSHOT</groucho-core.build.finalName>
+		
+<!-- 		<groucho-lab.build.depencenciesDirectory>${basedir}/../groucho-lab/target/libs</groucho-lab.build.depencenciesDirectory> -->
+		<groucho-lab.build.depencenciesDirectory>${project.build.directory}/dependency</groucho-lab.build.depencenciesDirectory>
+		
 		
 <!--         argLine must be defined, otherwise surfire/failsafe will broke the build when using @{argLine} (see **HERE-ARG-LINE**) -->
         <argLine></argLine>
@@ -71,11 +83,11 @@
 			<version>${groucho-core.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>it.cnr.iasi.saks.groucho</groupId>
-			<artifactId>groucho-lsh-rest</artifactId>
-			<version>${groucho-lsh-rest.version}</version>
-		</dependency>
+ 		<dependency> 
+ 			<groupId>it.cnr.iasi.saks.groucho</groupId> 
+ 			<artifactId>groucho-lsh-rest</artifactId> 
+ 			<version>${groucho-lsh-rest.version}</version> 
+ 		</dependency> 
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -112,6 +124,30 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>prepare-package</phase>
+						<goals>
+              				<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<outputDirectory>${groucho-lab.build.depencenciesDirectory}</outputDirectory>
+					                <overWriteReleases>false</overWriteReleases>
+					                <overWriteSnapshots>false</overWriteSnapshots>
+					                <overWriteIfNewer>true</overWriteIfNewer>									
+								</artifactItem>
+							</artifactItems>
+							<!-- other configurations here -->
+						</configuration>
+					</execution>					
+				</executions>
+			</plugin>				
         	<plugin>
             	<groupId>org.apache.maven.plugins</groupId>
                 	<artifactId>maven-jar-plugin</artifactId>
@@ -126,6 +162,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<reuseForks>false</reuseForks>
 					<useUnlimitedThreads>true</useUnlimitedThreads>
@@ -134,6 +177,35 @@
 					</argLine>
 				</configuration>
 			</plugin>
+		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
+<!-- 				<version>2.18.1</version> -->
+				<version>2.19.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<reuseForks>false</reuseForks>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
+					<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>					
+					<argLine>
+						-Xmx4G -agentpath:${groucho-crochet.build.directory}/libtagging.so
+						-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+						-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+					@{argLine}
+						-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
+						-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+						-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConf.properties
+					</argLine>
+				</configuration>
+			</plugin>									
 		</plugins>
 	</build>
 </project>
